--- a/task/AllinOne2.conf
+++ b/task/AllinOne2.conf
@@ -1,3 +1,5 @@
+cron "30 7 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_ddnc_farmpark.js, tag=京东东东乐园
+cron "0 10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_qmwxj.js, tag=京东柠檬全民挖现金
 cron "0 9 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou.js, tag=京东浓情618与粽不同
 cron "30 */1 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_ppkhr.js, tag=京东柠檬品牌狂欢日
 cron "5 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooOpencard10.js, tag=京东618开卡活动10
