--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,3 +1,7 @@
+京东东东乐园 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_ddnc_farmpark.js,cronexpr="30 7 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东柠檬全民挖现金 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_qmwxj.js,cronexpr="0 10 * * *", timeout=3600, script-update-interval=43200, enable=true
+
 京东浓情618与粽不同 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou.js,cronexpr="0 9 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东柠檬品牌狂欢日 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_ppkhr.js,cronexpr="30 */1 * * *", timeout=3600, script-update-interval=43200, enable=true
