--- a/task/AllinOne2.conf
+++ b/task/AllinOne2.conf
@@ -1,3 +1,6 @@
+cron "0 23 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/xl2101200/-/main/ppz.js, tag=拼拼猪
+cron "15 10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooElecsport.js, tag=京东东东电竞经理
+cron "15 13 6-18 6 *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou02.js, tag=京东粽情端午
 cron "30 7 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_ddnc_farmpark.js, tag=京东东东乐园
 cron "0 10 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_qmwxj.js, tag=京东柠檬全民挖现金
 cron "0 9 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou.js, tag=京东浓情618与粽不同
