--- a/task/JD_shadowRocket.conf
+++ b/task/JD_shadowRocket.conf
@@ -1,3 +1,7 @@
+京东东东电竞经理 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooElecsport.js,cronexpr="15 10 * * *", timeout=3600, script-update-interval=43200, enable=true
+
+京东粽情端午 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/zooPanda/zoo/dev/zooLongzhou02.js,cronexpr="15 13 6-18 6 *", timeout=3600, script-update-interval=43200, enable=true
+
 京东东东乐园 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_ddnc_farmpark.js,cronexpr="30 7 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东柠檬全民挖现金 = type=cron,script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_qmwxj.js,cronexpr="0 10 * * *", timeout=3600, script-update-interval=43200, enable=true
